test/e2e/fail/014-unknown-enum/expected.stderr
error[E0012]: unknown enum
 --> $FILE:1:9
  |
1 | let y = Option::Some(1);
  |         ^^^^^^^^^^^^^^^ enum `Option` is not defined
  |
